--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,20 @@ version = "0.5.0-rc.2"
 features = ["json"]
 
 [dependencies]
-reqwest = "0.11.11"
-regex = "1.5.6"
+regex = "1.7.1"
+# color-eyre = "0.6.2"
+# tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+# tracing-error = "0.2.0"
+# tracing = "0.1.37"
+serde = "1.0.152"
+once_cell = "1.17.0"
+graphql_client = { version = "0.12.0", features = ["reqwest-rustls"] }
+html-escape = "0.2.13"
+toml = "0.7.3"
+# anyhow = "1.0.69"
+
+[dependencies.reqwest]
+default-features = false
+features = ["rustls-tls", "json"]
+version = "0.11.14"
+
